--- a/.github/workflows/metricsembed.yml
+++ b/.github/workflows/metricsembed.yml
@@ -22,3 +22,10 @@ jobs:
           config_timezone: Asia/Calcutta
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
+          plugin_stargazers: yes
+          plugin_music: yes
+          plugin_music_provider: spotify # Use Spotify as provider
+          plugin_music_mode: recent      # Set plugin mode
+          plugin_music_limit:   10        # Limit to 4 entries
+          plugin_music_played_at: yes    # Show timestamp (for spotify only)
+          plugin_music_token: "${{ secrets.SPOTIFY_CLIENT_ID }}, ${{ secrets.SPOTIFY_CLIENT_SECRET }}, ${{ secrets.SPOTIFY_REFRESH_TOKEN }}"
