--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -3,7 +3,6 @@ name: Update README
 on:
   schedule:
     - cron: '0 3 * * *'
-    
   workflow_dispatch:
 
 jobs:
@@ -15,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: jamesgeorge007/github-activity-readme@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GHTOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         with:
           COMMIT_MSG: 'Update Activity'
           MAX_LINES: 10
