--- a/.github/workflows/devto.yml
+++ b/.github/workflows/devto.yml
@@ -1,2 +1,18 @@
-- name: @dailydotdev/devcard
-  uses: dailydotdev/action-devcard@2.0.5
+name: DevCard
+
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+  schedule:
+    - cron: "0 10 * * 1"
+
+jobs:
+  devcard:
+    runs-on: ubuntu-latest
+    steps:
+      - name: devcard
+        uses: dailydotdev/action-devcard@2.0.2
+        with:
+          devcard_id: ${{ secrets.DEVCARD_ID }}
