--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -54,7 +54,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: jamesgeorge007/github-activity-readme@master
         env:
-          GITHUB_TOKEN: ${{secrets.METRICS_TOKEN}}
+          GITHUB_TOKEN: ${{secrets.ACTIVITY_TOKEN}}
         with:
           COMMIT_MSG: 'Update Activity'
           MAX_LINES: 10
