--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -1,4 +1,4 @@
-name: Readme
+name: main
 
 on:
   workflow_dispatch:
@@ -36,131 +36,30 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-           token: ${{ secrets.METRICS_TOKEN }}
-           user: adityathakekar
-           template: classic
-           base: header, activity, community, repositories, metadata
-           config_timezone: Asia/Calcutta
-           plugin_isocalendar: yes
-           plugin_isocalendar_duration: half-year
-           plugin_stargazers: yes
-           name: Update README
+         token: ${{ secrets.ACTIVITY_TOKEN }}
+         user: adityathakekar
+         template: classic
+         base: header, activity, community, repositories, metadata
+         config_timezone: Asia/Calcutta
+         plugin_isocalendar: yes
+         plugin_isocalendar_duration: half-year
+         plugin_stargazers: yes
+         name: Update README
 
-  build:
+  generate:
     runs-on: ubuntu-latest
-    name: Update this repo's README with recent activity
-
+    timeout-minutes: 10
     steps:
-      - uses: actions/checkout@v2
-      - uses: jamesgeorge007/github-activity-readme@master
-        env:
-          GITHUB_TOKEN: ${{secrets.ACTIVITY_TOKEN}}
-        with:
-          COMMIT_MSG: 'Update Activity'
-          MAX_LINES: 10
-
-  test:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          cache: yarn
-          node-version: 16
-      - run: yarn install --frozen-lockfile
-
-      - run: yarn type
-      - run: yarn lint
-      - run: yarn test --ci
-
-  test-benchmark:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          cache: yarn
-          node-version: 16
-      - run: yarn install --frozen-lockfile
-
-      - run: ( cd packages/gif-creator ; yarn benchmark )
-
-  test-action:
-    runs-on: ubuntu-latest
-    needs: build-docker-image
-
-    steps:
-      - name: generate-snake-game-from-github-contribution-grid
-        id: snake-gif
+     -  name: generate github-contribution-grid-snake.svg
         uses: Platane/snk@master
         with:
-          github_user_name: adityathakekar
-          gif_out_path: dist/github-contribution-grid-snake.gif
+          github_user_name: ${{ github.adityathakekar }}
           svg_out_path: dist/github-contribution-grid-snake.svg
-
-      - name: ensure the generated file exists
-        run: |
-          ls -l ${{ steps.snake-gif.outputs.gif_out_path }}
-          test -f ${{ steps.snake-gif.outputs.gif_out_path }}
-
-      - uses: crazy-max/ghaction-github-pages@v2.5.0
+          
+     -  name: push github-contribution-grid-snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v2.5.0
         with:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN_GH_PAGES }}
-
-  deploy-ghpages:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          cache: yarn
-          node-version: 16
-      - run: yarn install --frozen-lockfile
-
-      - run: yarn build:demo
-        env:
-          GITHUB_USER_CONTRIBUTION_API_ENDPOINT: https://snk-one.vercel.app/api/github-user-contribution/
-
-      - uses: crazy-max/ghaction-github-pages@v2.5.0
-        if: success() && github.ref == 'refs/heads/master'
-        with:
-          target_branch: gh-pages
-          build_dir: packages/demo/dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN_GH_PAGES }}
-
-  build-docker-image:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          cache: yarn
-          node-version: 16
-      - run: yarn install --frozen-lockfile
-
-      - run: yarn build:action
-
-      - uses: docker/setup-qemu-action@v1
-
-      - uses: docker/setup-buildx-action@v1
-
-      - uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - uses: docker/build-push-action@v2
-        id: docker_build
-        with:
-          push: ${{ github.ref == 'refs/heads/master' }}
-          tags: |
-            platane/snk:latest
-            platane/snk:${{ github.sha }}
-          file: packages/action/Dockerfile
-          context: packages/action
+          GITHUB_TOKEN: ${{ secrets.ACTIVITY_TOKEN }}
