--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -1,1 +1,62 @@
+name: Generate Stats Images
 
+on:
+  push:
+    branches: [ master ]
+  schedule:
+    - cron: "30 5 * * 1"
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    
+    # FIX 1: Grant permission to write/push changes to the repo
+    permissions:
+      contents: write
+
+    steps:
+    - uses: actions/checkout@v3 # Updated to v3 (better standard)
+
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v4 # Updated to v4
+      with:
+        python-version: '3.8'
+        architecture: 'x64'
+
+    - uses: actions/cache@v3 # Updated to v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
+    - name: Install requirements
+      run: |
+        python3 -m pip install --upgrade pip setuptools wheel
+        # Ensure requirements.txt exists before running this
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+    - name: Generate images
+      run: |
+        python3 --version
+        # Ensure your python script is actually named 'generate_images.py'
+        python3 generate_images.py
+      env:
+        # Make sure 'ACCESS_TOKEN' is added in your Repo Settings -> Secrets
+        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }} 
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        EXCLUDED: ${{ secrets.EXCLUDED }}
+        EXCLUDED_LANGS: ${{ secrets.EXCLUDED_LANGS }}
+        EXCLUDE_FORKED_REPOS: true
+
+    - name: Commit to the repo
+      run: |
+        # FIX 2: Git requires BOTH name and email
+        git config --global user.name "adityathakekar"
+        git config --global user.email "adityathakekar@users.noreply.github.com"
+        
+        git add .
+        # The '|| echo' prevents failure if there are no changes to commit
+        git commit -m 'Update generated files' || echo "No changes to commit"
+        git push
